Fix shadow misalignment

--- a/source/static/sass/layout.sass
+++ b/source/static/sass/layout.sass
@@ -181,7 +181,7 @@
     width: 200px
     position: relative
     z-index: 2
-    box-shadow: 2px 2px 5px var(--shadow)
+    box-shadow: 2px 0 5px var(--shadow)
 
   a
     text-decoration: none
